--- a/index.html
+++ b/index.html
@@ -8,12 +8,257 @@
     <!-- bootstrap css calling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
     <title>Panda Commarce</title>
 </head>
 
 <body>
-    <h2>Mr Panda Roj Khay Anda</h2>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class=" container">
+                <a class="navbar-brand" href="#"><img src="./images/logo.png" alt="Panda Commarce Logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#shoes">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#backpack">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <section class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner mt-5">
+                    <div class="carousel-item active">
+                        <div class="row custom-bg p-5">
+                            <div class="col-md-7">
+                                <h1>Hello World</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, quia aspernatur
+                                    alias
+                                    sequi aliquid vel iure magni aliquam deleniti quidem eos minus hic voluptatem at
+                                    optio
+                                    laborum ullam. Repellat, doloribus!</p>
+                                <h1>$420</h1>
+                                <button type="button" class="btn btn-success">Success</button>
+                            </div>
+                            <div class="col-md-5"><img src="./images/banner-images/headphone.png" class="d-block w-100"
+                                    alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item ">
+                        <div class="row  custom-bg bg-gradient bg-opacity-50% p-5">
+                            <div class="col-md-7">
+                                <h1>Hello World</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, quia aspernatur
+                                    alias
+                                    sequi aliquid vel iure magni aliquam deleniti quidem eos minus hic voluptatem at
+                                    optio
+                                    laborum ullam. Repellat, doloribus!</p>
+                                <h1>$420</h1>
+                                <button type="button" class="btn btn-success">Success</button>
+                            </div>
+                            <div class="col-md-5"><img src="./images/banner-images/tv.png" class="d-block w-100"
+                                    alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row  custom-bg bg-gradient bg-opacity-50% p-5">
+                            <div class="col-md-7">
+                                <h1>Hello World</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, quia aspernatur
+                                    alias
+                                    sequi aliquid vel iure magni aliquam deleniti quidem eos minus hic voluptatem at
+                                    optio
+                                    laborum ullam. Repellat, doloribus!</p>
+                                <h1>$420</h1>
+                                <button type="button" class="btn btn-success">Success</button>
+                            </div>
+                            <div class="col-md-5"><img src="./images/banner-images/xbox.png" class="d-block w-100"
+                                    alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </header>
+
+
+    <main>
+        <section class="container mt-5">
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 ">
+                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                        <h2 class="text-white">Watch</h2>
+                        <img src="./images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 ">
+                    <div class="p-3 border bg-secondary d-flex align-items-center justify-content-between rounded-3">
+                        <h2 class="text-white">Shoes</h2>
+                        <img src="./images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 ">
+                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                        <h2 class="text-white">Bag</h2>
+                        <img src="./images/categories/bag.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container mt-5" id="shoes">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card shadow border-0 h-100">
+                        <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <h2>$420</h2>
+                            <button class=" btn btn-warning"> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow border-0 h-100">
+                        <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <h2>$470</h2>
+                            <button class=" btn btn-warning"> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow border-0 h-100">
+                        <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <h2>$520</h2>
+                            <button class="btn btn-warning"> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container mt-5" id="backpack">
+            <h2>Bags</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card shadow border-0 h-100">
+                        <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <h5>$420</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class=" btn btn-warning"> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow border-0 h-100">
+                        <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <h5>$470</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+
+                            <button class=" btn btn-warning"> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow border-0 h-100">
+                        <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <h5>$520</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+
+                            <button class="btn btn-warning"> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container mt-5" id="subscribe">
+            <div class="d-flex justify-content-center align-items-center custom-bg rounded-3" style="height: 300px;">
+                <div>
+                    <h1>Stay In Touch</h1>
+                    <p>Get updates on sales, special offers, and more</p>
+                    <input type="email" placeholder="Enter your email">
+                    <br>
+                    <button class="btn btn-warning mt-3">Submit</button>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+    <footer>
+        <section class="mt-5">
+            <p class=" text-center mt-5">
+                <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+            </p>
+        </section>
+
+    </footer>
+
 
     <!-- bootstrap js calling -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
